gdb/valops.c
@@ -2374,6 +2374,15 @@ value_struct_elt (struct value **argp,
       if (v)
 	return v;
 
+      if (current_language->la_language == language_fortran)
+	{
+	  /* If it is not a field it is the type name of an inherited
+	  structure.  */
+	  v = search_struct_field (name, *argp, t, 1);
+	  if (v)
+	    return v;
+	}
+
       /* C++: If it was not found as a data field, then try to
 	 return it as a pointer to a method.  */
       v = search_struct_method (name, argp, args, 0,
